# hk_factor_autoresearch

./: .gitignore  ARCHITECTURE_ADDENDUM.md  README.md  memory.md  program.md  pyproject.toml
backtest_engine/: fixed_engine.py  minimal_lane.py
baselines/: README.md  baseline_registry.toml
combos/: README.md  combo_templates.py
configs/: autoresearch_phase_a.toml  baseline_phase_a.toml  order_trade_interaction_screen.toml
dashboard/: README.md  research_dashboard_app.py
data_contracts/: caveat_lane.md  schema.md  timing_rules.md  universe_rules.md
diagnostics/: __init__.py  redundancy.py  regime_slices.py
docs/: acceptance_run_summary_2026-04.md  acceptance_run_summary_2026-04_close_vwap_pressure.md  semantic_gating_zh.md  upstream_field_request.md
evaluation/: diagnostics.py  metrics.py  pre_eval.py  robustness.py  significance.py  transfer_entropy.py
event_boundary_push/: README.md  __init__.py  _core.py  _ground_truth.py  build_event_cases.py  build_event_universe.py  build_instrument_profile_seed.py  detect_boundary_push_events.py  event_spec.md  export_event_review_pack.py  validate_ground_truth.py
factor_contracts/: profile.py  schema.md
factor_defs/: README.md  avg_trade_notional_bias.py  avg_trade_notional_bias_change.py  change_support.py  close_vwap_churn_interaction.py  close_vwap_churn_interaction_change.py  close_vwap_gap_intensity.py  close_vwap_gap_intensity_change.py  example_structural_factor.py  order_lifecycle_churn.py  order_lifecycle_churn_change.py  order_notional_vs_trade_notional_gap.py  order_trade_event_ratio.py  (+14 more)
(+139 files in other folders)
