[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hk-factor-autoresearch"
version = "0.1.0"
description = "Phase A semi-auto skeleton for controlled Hong Kong factor research"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dashboard = [
    "dash>=2.18,<3",
    "pandas>=2.2,<3",
    "plotly>=5.24,<6",
]

[tool.setuptools]
py-modules = []
